@@ -1,4 +1,8 @@
 2015-02-21 Even Rouault <even.rouault@spatialys.com>
+	* nad/Makefile.am: compatibility with proj-datumgrids-1.6RC1
+	(patch by sebastic, #249)
+
+2015-02-21 Even Rouault <even.rouault@spatialys.com>
 	* nad/Makefile.am: fix install target when no .lla files are in
 	nad subdirectory.
 
